<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2017 Rizky Kharisma (@ngengs)
  ~
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <string name="app_name">Baking Apps</string>
    <string name="prompt_text_hint">Prompt Text Hint</string>
    <string name="prompt_image">Prompt Image</string>
    <string name="empty_recipes">Recipes is empty</string>
    <string name="error_load_recipes">Failed load recipes</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="subtitle_ingredient">Ingredient List</string>
    <string name="title_step">Step</string>
    <string name="content_description_button_prev">Button Previous Step</string>
    <string name="content_description_button_next">Button Next Step</string>
    <string name="content_description_logo_ingredient">Logo Ingredient List</string>
    <string name="content_description_step_thumbnail">Image Step Thumbnail</string>
    <string name="content_description_recipes_image">Recipes Image</string>
    <string name="content_description_step_logo_serving">Image Logo Serving</string>
    <string name="content_description_placeholder_step">Placeholder Step</string>
    <string name="content_description_step_image_thumbnail">Step Image Thumbnail</string>
    <string name="content_description_step_video_indicator">Step Video Indicator</string>
    <string name="content_description_application_logo">Application Logo</string>
</resources>
