<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2017 Rizky Kharisma (@ngengs)
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_recipe_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="com.ngengs.android.baking.apps.fragments.RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default"
            android:text="@string/title_ingredient"
            android:textSize="@dimen/recipe_detail_cards_title_text" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ingredient_header_size"
                    android:background="@color/colorAccent">

                    <ImageView
                        android:layout_width="@dimen/ingredient_logo"
                        android:layout_height="@dimen/ingredient_logo"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_description_logo_ingredient"
                        android:tint="@color/colorTintDrawable"
                        app:srcCompat="@drawable/ic_food_variant" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/margin_default"
                        android:text="@string/subtitle_ingredient"
                        android:textColor="#FFF" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/margin_default"
            android:text="@string/title_step"
            android:textSize="@dimen/recipe_detail_cards_title_text" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
