<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2017 Rizky Kharisma (@ngengs)
  ~
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        card_view:cardBackgroundColor="@color/colorAccent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/step_cards_size">

            <ImageView
                android:layout_width="@dimen/step_placeholder"
                android:layout_height="@dimen/step_placeholder"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_description_placeholder_step"
                android:tint="@color/colorTintDrawable"
                card_view:srcCompat="@drawable/ic_stove" />

            <ImageView
                android:id="@+id/stepImageThumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_description_step_image_thumbnail"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/indicatorVideo"
                android:layout_width="@dimen/step_video_indicator"
                android:layout_height="@dimen/step_video_indicator"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/content_description_step_video_indicator"
                android:tint="@color/colorTintDrawable"
                card_view:srcCompat="@drawable/ic_video" />

            <View
                android:id="@+id/indicatorSelected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorStepSelected"
                android:visibility="gone" />

            <TextView
                android:id="@+id/stepNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/indicatorVideo"
                android:layout_toStartOf="@id/indicatorVideo"
                android:padding="@dimen/margin_default"
                android:textColor="@color/colorTextInDark"
                android:textSize="@dimen/cards_title_text_medium" />

            <TextView
                android:id="@+id/stepShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/margin_default"
                android:textColor="@color/colorTextInDark"
                android:textSize="@dimen/cards_title_text_large" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>